# ecmaos

./: .gitattributes  .npmrc  .pnpmfile.cjs  APPS.md  DEVICES.md  LICENSE  LICENSE-APACHE  MODULES.md  NEWS.md  README.md  SECURITY.md  bun.lockb  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  typedoc.json
.changeset/: cyan-lobsters-tap.md  empty-insects-check.md  four-readers-lie.md  fuzzy-chefs-search.md  late-steaks-live.md  light-games-judge.md  many-pots-talk.md  polite-bikes-join.md  sharp-dolls-warn.md  silly-ducks-carry.md  sour-garlics-worry.md  sweet-moons-reply.md
.github/: dependabot.yml
apps/asc/: package.json  pnpm-lock.yaml
apps/boilerplate/: CHANGELOG.md  package.json  pnpm-lock.yaml
apps/code/: CHANGELOG.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/news/: package.json  tsconfig.json
apps/webamp/: package.json  pnpm-lock.yaml  tsconfig.json
core/bios/: .gitignore  CHANGELOG.md  CMakeLists.txt  build.sh  index.html  package.json  pnpm-lock.yaml
core/bios/src/: bios.cpp  bios.d.ts  index.js
core/bios/src/commands/: cat.cpp  commands.hpp  execute.cpp  ls.cpp
core/jaffa/: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
core/kernel.wasm/: CMakeLists.txt  build.sh  index.html  package.json  pnpm-lock.yaml
core/kernel.wasm/src/: index.ts  kernel.cpp  kernel.d.ts
core/kernel.wasm/src/commands/: CMakeLists.txt  echo.cpp  rm.cpp
docs/: CNAME  hierarchy.html  index.html  modules.html
(+891 files in other folders)
